--- a/church1/income-book.html
+++ b/church1/income-book.html
@@ -357,6 +357,9 @@ const formData = new FormData(form);
           text: "All records saved successfully!",
           icon: "success"
         }).then(() => {
+           // Clear localStorage after successful save
+           localStorage.removeItem("incomeTableData");
+
           // Trigger the Full View button click
           document.getElementById('fullBtn').click();
         });
@@ -378,17 +381,78 @@ const formData = new FormData(form);
       saveButton.style.display = "block";
     });
 
+
     
 });
 
 
-// Prevent form submission on Enter key press
-const IncomeTableForm = document.getElementById("incomeTableForm");
-IncomeTableForm.addEventListener("keydown", function(event) {
-    if (event.key === "Enter") {
-        event.preventDefault();
+
+// Save data to localStorage whenever the user modifies the table
+function saveDataToLocalStorage() {
+  const rows = document.querySelectorAll("#amountTable tbody tr");
+  const tableData = [];
+
+  rows.forEach((row) => {
+    const particularsInput = row.cells[1].querySelector("input");
+    const amountInput = row.cells[2].querySelector("input");
+
+    if (particularsInput && amountInput) {
+      tableData.push({
+        particulars: particularsInput.value.trim(),
+        amount: parseFloat(amountInput.value) || 0,
+      });
     }
+  });
+
+  localStorage.setItem("incomeTableData", JSON.stringify(tableData));
+}
+// Add event listeners to save data when inputs change
+document.addEventListener("input", (event) => {
+  if (event.target.closest("#amountTable")) {
+    saveDataToLocalStorage();
+  }
 });
+
+
+// Load data from localStorage when the page loads
+function loadDataFromLocalStorage() {
+  const savedData = localStorage.getItem("incomeTableData");
+
+  if (savedData) {
+    const tableData = JSON.parse(savedData);
+    const tableBody = document.querySelector("#amountTable tbody");
+
+    tableData.forEach((rowData, index) => {
+      const newRow = tableBody.insertRow();
+
+      const cell1 = newRow.insertCell(0);
+      const cell2 = newRow.insertCell(1);
+      const cell3 = newRow.insertCell(2);
+
+      // Set the row number
+      cell1.textContent = index + 1;
+
+      // Add the particulars input
+      const particularsInput = document.createElement("input");
+      particularsInput.type = "text";
+      particularsInput.value = rowData.particulars;
+      particularsInput.classList.add("particulars-input");
+      particularsInput.setAttribute("list", "particularsList");
+      cell2.appendChild(particularsInput);
+
+      // Add the amount input
+      const amountInput = document.createElement("input");
+      amountInput.type = "number";
+      amountInput.value = rowData.amount;
+      amountInput.classList.add("amount-input");
+      cell3.appendChild(amountInput);
+    });
+  }
+}
+
+// Call the function to load data when the page loads
+document.addEventListener("DOMContentLoaded", loadDataFromLocalStorage);
+
   </script>
   </body>
 </html>
