Added a function to hide all table columns with no values from the table shown to the user

--- a/church1/expenditure-records.html
+++ b/church1/expenditure-records.html
@@ -102,6 +102,45 @@
     <script src="./assest/scripts/script.js"></script>
 
     <script>
+  document.addEventListener('DOMContentLoaded', () => {
+  // Function to hide all empty columns in the table
+  function hideEmptyColumns(tableId) {
+    const table = document.getElementById(tableId);
+    const headers = table.querySelectorAll("thead th");
+    const rows = table.querySelectorAll("tbody tr");
+
+    if (!table || headers.length === 0 || rows.length === 0) {
+      console.warn(`Table with ID "${tableId}" is empty or not found.`);
+      return;
+    }
+    // Iterate through each column
+    headers.forEach((header, colIndex) => {
+      let isEmpty = true;
+    // Check if all cells in the column are empty
+      rows.forEach((row) => {
+        const cell = row.cells[colIndex];
+        if (cell && cell.textContent.trim() !== "") {
+          isEmpty = false; // If any cell has content, the column is not empty
+        }
+      });
+      // Hide the column if it is empty
+      if (isEmpty) {
+        // Hide the header
+        header.style.display = "none";
+        // Hide all cells in the column
+        rows.forEach((row) => {
+          const cell = row.cells[colIndex];
+          if (cell) {
+            cell.style.display = "none";
+          }
+        });
+      }
+    });
+  }
+// The code above is a function that hides empty columns in a table. It checks each column in the table and hides it if all cells in that column are empty. The function is called after the data is fetched and the table is populated.
+
+
+
         $(document).ready(function() {
             const webAppUrl = 'https://script.google.com/macros/s/AKfycby9-laPphroGrCkAsLCIUhM9ZHXhzfB5AB_bW5013Kxi33_epoj47Zd2qKzZM3pxOxryQ/exec';
 
@@ -142,13 +181,19 @@
                         pageLength: 10, // Set the number of rows per page
                         lengthMenu: [5, 10, 25, 50, 100, 200] // Options for number of rows per page
                     });
+
+                    hideEmptyColumns("dataTable");// Call the function to hide empty columns
+
                 })
                 .catch(error => console.error('Error fetching data:', error))
                 .finally(() => {
                     // Hide spinner
                     $('#spinner2').hide();
                 });
-        });
+         });
+
+
+    });
     </script>
 </body>
 </html>
