--- a/church1/conference-expenditure-book.html
+++ b/church1/conference-expenditure-book.html
@@ -149,6 +149,14 @@
     });
     return; // Stop further execution
   }
+  else if (new Date(dateValue) > new Date()) {
+  Swal.fire({
+    title: "Error",
+    text: "The date cannot be in the future.",
+    icon: "error",
+  });
+  return; // Stop further execution
+}
 
 // Format the date to DD-MMM-YYYY
 const dateObject = new Date(dateValue);
