--- a/church1/income-book.html
+++ b/church1/income-book.html
@@ -153,11 +153,20 @@
 
 // Retrieve the date value
 const dateValue = document.getElementById("incomeDate").value;
-// Validate the date
+// Validate the date, make sure it is not empty or in the future
 if (!dateValue) {
   Swal.fire({
     title: "Error",
     text: "Please select a date before saving.",
+    icon: "error",
+  });
+  return; // Stop further execution
+}
+
+else if (new Date(dateValue) > new Date()) {
+  Swal.fire({
+    title: "Error",
+    text: "The date cannot be in the future.",
     icon: "error",
   });
   return; // Stop further execution
