--- a/church1/cutoff.html
+++ b/church1/cutoff.html
@@ -82,7 +82,7 @@
             <table id="dataTable" class="table table-striped table-bordered">
                 <thead>
                     <tr>
-                        <th>Date</th>
+                        <th>Date_Field</th>
                         <th>Tithe</th>
                         <th>C.B.F</th>
                         <th>Loose Offering</th>
@@ -112,7 +112,7 @@
             <table id="dataTable2" class="table table-striped table-bordered">
                 <thead>
                     <tr>
-                        <th>Date</th>
+                        <th>Date_Field</th>
                         <th>C.B.F</th>
                         <th>Loose Offering</th>
                         <th>Thanks Giving</th>
@@ -135,13 +135,15 @@
     
 </div>
 
-    <footer class="footer">
-        <p>&copy; 2025 Phlashly Inc©. All rights reserved.</p>
-        <p>Contact us: <a href="mailto:franklinboachie@gmail.com">franklinboachie@gmail.com</a> | Phone: +233-540-896194</p>
-      </footer>
+<footer class="footer">
+    <p>&copy; 2025 Phlashly Inc©. All rights reserved.</p>
+    <p>Contact us: <a href="mailto:franklinboachie@gmail.com">franklinboachie@gmail.com</a> | Phone: +233-540-896194</p>
+</footer>
     <script src="./assest/scripts/script.js"></script>
 
-    <script>
+
+<script>
+
         $(document).ready(function() {
             const webAppUrl = 'https://script.google.com/macros/s/AKfycbyuWNfL4LByPRBo9pGUk_27DHAF-xiX8yR0ubIcbpa_yqQdTdICNvUo2iqlvTml1rXg/exec';
 
@@ -235,6 +237,7 @@
                     $('#spinner2').hide();
                 });
         });
+  
 
     </script>
 </body>
