Added download buttons for the Denominations and Cutoff sheet

--- a/church1/cutoff.html
+++ b/church1/cutoff.html
@@ -131,6 +131,16 @@
 
     <br>
     <div id="grandTotal" style="font-size: 40px; text-align: center; color: rgb(21, 35, 47); text-decoration: solid;" ></div>
+
+
+    <div class="buttons">
+        <i class="fa-solid  fa-beat" style="--fa-animation-duration: 2s;" >
+          <button id="downloadCutOffPdf" class="btn download-btn" >
+            DOWNLOAD PAGE
+          </button>
+        </i>
+      </div>
+      
     <br><br><br><br>
     
 </div>
