Hide the learn more button on the landing page

--- a/church1/landing-page.html
+++ b/church1/landing-page.html
@@ -72,7 +72,7 @@
             <div class="slide-content">
               <h2 class="slide-title">Leviticus 27:30</h2>
               <p class="slide-description">And all the tithe of the land, whether of the seed of the land or of the fruit of the tree, is the Lord’s. It is holy to the Lord.</p>
-              <a href="#" class="slide-button"><span>Learn More</span></a>
+              <!-- <a href="#" class="slide-button"><span>Learn More</span></a> -->
             </div>
           </div>
           <div class="slider-item swiper-slide">
@@ -80,7 +80,7 @@
               <!-- <h3 class="slide-subtitle">Slide 02</h3> -->
               <h2 class="slide-title">Exodus 35:21</h2>
               <p class="slide-description">Then everyone came whose heart was stirred, and everyone whose spirit was willing, and they brought the Lord’s offering for the work of the tabernacle of meeting, for all its service, and for the holy garments.</p>
-              <a href="#" class="slide-button"><span>Learn More</span></a>
+              <!-- <a href="#" class="slide-button"><span>Learn More</span></a> -->
             </div>
           </div>
           <div class="slider-item swiper-slide">
@@ -88,7 +88,7 @@
               <!-- <h3 class="slide-subtitle">Slide 03</h3> -->
               <h2 class="slide-title">2 Chronicles 31:4</h2>
               <p class="slide-description">Moreover he commanded the people who dwelt in Jerusalem to contribute support[a] for the priests and the Levites, that they might devote themselves to the Law of the Lord.</p>
-              <a href="#" class="slide-button"><span>Learn More</span></a>
+              <!-- <a href="#" class="slide-button"><span>Learn More</span></a> -->
             </div>
           </div>
           <div class="slider-item swiper-slide">
@@ -96,7 +96,7 @@
               <!-- <h3 class="slide-subtitle">Slide 04</h3> -->
               <h2 class="slide-title">Haggai 1:4</h2>
               <p class="slide-description">Is it time for you yourselves to dwell in your paneled houses, and this temple to lie in ruins?</p>
-              <a href="#" class="slide-button"><span>Learn More</span></a>
+              <!-- <a href="#" class="slide-button"><span>Learn More</span></a> -->
             </div>
           </div>
           <div class="slider-item swiper-slide">
@@ -105,7 +105,7 @@
               <h2 class="slide-title">Malachi 1:8</h2>
               <p class="slide-description">And when you offer the blind as a sacrifice, Is it not evil? And when you offer the lame and sick, Is it not evil?
                 Offer it then to your governor! Would he be pleased with you? Would he accept you favorably? ”Says the Lord of hosts</p>
-              <a href="#" class="slide-button"><span>Learn More</span></a>
+              <!-- <a href="#" class="slide-button"><span>Learn More</span></a> -->
             </div>
           </div>
         </div>
