Added the datalist for all the input tables in a different file and dynamically reference it

--- a/church1/conference-expenditure-book.html
+++ b/church1/conference-expenditure-book.html
@@ -116,15 +116,24 @@
       <p>Contact us: <a href="mailto:franklinboachie@gmail.com">franklinboachie@gmail.com</a> | Phone: +233-540-896194</p>
     </footer>
 
+<!-- Placeholder for the datalist -->
+<div id="datalistContainer"></div>
+
+
     <script src="./assest/scripts/script.js"></script>
 
-    <datalist id="particularsList">
-      <option value="Sabbath Sch Order"></option>
-      <option value="Camp Goal"></option>
-    </datalist>
+   <script>
+
+  // Dynamically load the datalist from an external file
+  fetch('./assest/datalist/conference-expenditure-datalist.html')
+    .then(response => response.text())
+    .then(data => {
+      document.getElementById('datalistContainer').innerHTML = data;
+    })
+    .catch(error => console.error('Error loading datalist:', error));
 
 
-<script>
+
     // For the Save Button (Submit button for the form)
     const scriptURL =  'https://script.google.com/macros/s/AKfycbyuWNfL4LByPRBo9pGUk_27DHAF-xiX8yR0ubIcbpa_yqQdTdICNvUo2iqlvTml1rXg/exec';                    
 
