--- a/church1/income-book.html
+++ b/church1/income-book.html
@@ -400,8 +400,8 @@ const formData = new FormData(form);
 
 
 
-// Save data to localStorage whenever the user modifies the table
-function saveDataToLocalStorage() {
+// Save data to SessionStorage whenever the user modifies the table
+function saveDataToSessionStorage() {
   const rows = document.querySelectorAll("#amountTable tbody tr");
   const tableData = [];
 
@@ -423,19 +423,19 @@ function saveDataToLocalStorage() {
     }
   });
 
-  localStorage.setItem("incomeTableData", JSON.stringify(tableData));
+  sessionStorage.setItem("incomeTableData", JSON.stringify(tableData));
 }
 // Add event listeners to save data when inputs change
 document.addEventListener("input", (event) => {
   if (event.target.closest("#amountTable")) {
-    saveDataToLocalStorage();
+    saveDataToSessionStorage();
   }
 });
 
 
-// Load data from localStorage when the page loads
-function loadDataFromLocalStorage() {
-  const savedData = localStorage.getItem("incomeTableData");
+// Load data from SessionStorage when the page loads
+function loadDataFromSessionStorage() {
+  const savedData = sessionStorage.getItem("incomeTableData");
 
   if (savedData) {
     const tableData = JSON.parse(savedData);
@@ -472,7 +472,7 @@ function loadDataFromLocalStorage() {
 }
 
 // Call the function to load data when the page loads
-document.addEventListener("DOMContentLoaded", loadDataFromLocalStorage);
+document.addEventListener("DOMContentLoaded", loadDataFromSessionStorage);
 
   </script>
   </body>
