--- a/church1/AdminDashBoard/theme/index.html
+++ b/church1/AdminDashBoard/theme/index.html
@@ -609,10 +609,10 @@
                 sessionStorage.removeItem("monthlyIncome");
                 sessionStorage.removeItem("monthlyExpenditure");
                 localStorage.removeItem("amountTableData");
-                localStorage.removeItem("incomeTableData");
-                localStorage.removeItem("localExpenditureTableData");
-                localStorage.removeItem("districtExpenditureTableData");
-                localStorage.removeItem("confExpenditureTableData");
+                sessionStorage.removeItem("incomeTableData");
+                sessionStorage.removeItem("localExpenditureTableData");
+                sessionStorage.removeItem("districtExpenditureTableData");
+                sessionStorage.removeItem("confExpenditureTableData");
             window.location.href = '../../../index.html';
             }
         });
