Remove fullViewTableData, from session when log out button is clicked

--- a/church1/AdminDashBoard/theme/index.html
+++ b/church1/AdminDashBoard/theme/index.html
@@ -608,7 +608,7 @@
                 sessionStorage.removeItem("user-info");
                 sessionStorage.removeItem("monthlyIncome");
                 sessionStorage.removeItem("monthlyExpenditure");
-                localStorage.removeItem("amountTableData");
+                localStorage.removeItem("fullViewTableData");
                 sessionStorage.removeItem("incomeTableData");
                 sessionStorage.removeItem("localExpenditureTableData");
                 sessionStorage.removeItem("districtExpenditureTableData");
