--- a/church1/AdminDashBoard/theme/chart-chartjs.html
+++ b/church1/AdminDashBoard/theme/chart-chartjs.html
@@ -495,7 +495,7 @@ document.addEventListener("DOMContentLoaded", () => {
                         sessionStorage.removeItem("user-info");
                         sessionStorage.removeItem("monthlyIncome");
                         sessionStorage.removeItem("monthlyExpenditure");
-                        localStorage.removeItem("amountTableData");
+                        localStorage.removeItem("fullViewTableData");
                         sessionStorage.removeItem("incomeTableData");
                         sessionStorage.removeItem("localExpenditureTableData");
                         sessionStorage.removeItem("districtExpenditureTableData");
