Changed the name from local record to local income record

--- a/church1/AdminDashBoard/theme/index.html
+++ b/church1/AdminDashBoard/theme/index.html
@@ -74,7 +74,7 @@
             <div class="dropdown-content">
               <a href="../../../church1/income-records.html">Income-Records</a>
               <a href="../../../church1/expenditure-records.html">Expenses-Records</a>
-              <a href="../../../church1/local-records.html">Local-Records</a>
+              <a href="../../../church1/local-income-records.html">Local-Income-Records</a>
               <a href="../../../church1/conference-records.html">Conference-Records</a>
               <a href="../../../church1/district-records.html">District-Records</a>
             </div>
@@ -130,8 +130,7 @@
                                 class="icon icon-chart-bar-33"></i><span class="nav-text">Dashboard</span></a>
                         <ul aria-expanded="false">
                             <li><a href="./index.html">Dashboard 1</a></li>
-                            <!-- <li><a href="./index2.html">Dashboard 2</a></li>  -->
-                            <li><a href="./chart-chartjs.html">Dashboard 2</a></li>
+                            <!-- <li><a href="./chart-chartjs.html">Dashboard 2</a></li> -->
                         </ul>
                     </li>
                 </ul>
@@ -279,9 +278,10 @@
         Main wrapper end
     ***********************************-->
 
-    <div class="button-container">
+    <!-- the next page is hidden  -->
+    <!-- <div class="button-container">
         <button id="customButton" class="btn custom-btn">Next Page</button>
-    </div>
+    </div> -->
 
     <br><br>
 
