--- a/church1/local-income-records.html
+++ b/church1/local-income-records.html
@@ -53,7 +53,7 @@
             <div class="dropdown-content">
               <a href="income-records.html">Income-Records</a>
               <a href="expenditure-records.html">Expenses-Records</a>
-              <a class="active" href="local-records.html">Local-Records</a>
+              <a class="active" href="local-income-records.html">Local-Income-Records</a>
               <a href="conference-records.html">Conference-Records</a>
               <a href="district-records.html">District-Records</a>
             </div>
@@ -63,7 +63,7 @@
       </nav>
       <br><br>
     <div class="container mt-5">
-        <h2 class="records-header" style="background-color:#8e651a;">TOTAL LOCAL RECORDS</h2>
+        <h2 class="records-header" style="background-color:#8e651a;">TOTAL LOCAL INCOME RECORDS</h2>
         <div class="table-responsive">
             <!-- Spinner -->
             <div id="spinner2" class="spinner2" style="display: none;">
