--- a/church1/income-records.html
+++ b/church1/income-records.html
@@ -51,7 +51,7 @@
             <div class="dropdown-content">
               <a class="active" href="income-records.html">Income-Records</a>
               <a href="expenditure-records.html">Expenses-Records</a>
-              <a href="local-records.html">Local-Records</a>
+              <a href="local-income-records.html">Local-Income-Records</a>
               <a href="conference-records.html">Conference-Records</a>
               <a href="district-records.html">District-Records</a>
             </div>
